# syrian_task

./: .gitignore  README.md  compose_texts.py  correct_punctuation.py  diarization.py  download_6mins_videos.py  generate_google_correction_forms.py  generate_google_correction_forms_V2.py  generate_google_correction_forms_V3_emirati.py  generate_google_sheet_passage_list.py  get_transcripts_metadata.py  gulf_text_check.py  input_manifest.json  paragraphs.py  passage_selection.py  processed_files.txt  processed_transcripts.txt  punctuation.py  pyproject.toml  syrian.csv  syrian.py  syrian_playlists.txt  syrian_playlists_old.txt  syrian_playlists_processed.txt  syrian_playlists_videos_presampled.csv  syrian_processed_passages.txt  syrian_videos_transcripts_processed.txt  text_correction.py  tokenize2.py  transcriptions.py
